# simple-cpp-game-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build-web.sh  compile_flags.txt  rebuilder.sh  serve-web.py
src/: CMakeLists.txt  ControllerState.hpp  Framebuffer.hpp  GameInterface.hpp  GameLogic.cpp  GameLogic.hpp  HostInterface.hpp  Image.hpp  Main.cpp  MemoryZone.hpp  SoundSample.hpp
